k8s-manifests/umami/service.yml
apiVersion: v1
kind: Service
metadata:
  name: umami
  namespace: tunenumbers
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: umami
